fix(table): comment out selected row styles to prevent fixed column bleed-through

--- a/src/theme/default.less
+++ b/src/theme/default.less
@@ -115,22 +115,22 @@ mark {
     }
   }
 
-  .ant-table-tbody > tr.ant-table-row-selected > td {
-    color: inherit;
-    background: rgb(var(--fc-fill-5-rgb) / 0.15);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected > td {
+  //   color: inherit;
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.15);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected:hover > td {
-    background: rgb(var(--fc-fill-5-rgb) / 0.25);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected:hover > td {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.25);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected > td.ant-table-column-sort {
-    background: rgb(var(--fc-fill-5-rgb) / 0.15);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected > td.ant-table-column-sort {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.15);
+  // }
 
-  .ant-table-tbody > tr.ant-table-row-selected:hover > td.ant-table-column-sort {
-    background: rgb(var(--fc-fill-5-rgb) / 0.25);
-  }
+  // .ant-table-tbody > tr.ant-table-row-selected:hover > td.ant-table-column-sort {
+  //   background: rgb(var(--fc-fill-5-rgb) / 0.25);
+  // }
 }
 
 /* antd */
